@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_http2: comforts ap_check_pipeline() on slave connections
+     to facilitate reuse (see https://github.com/icing/mod_h2/issues/128).
+     [Stefan Eissing, reported by Armin Abfalterer]
+     
   *) mod_http2: http/2 streams now with state handling/transitions as defined
      in RFC7540. Stream cleanup/connection shutdown reworked to become easier
      to understand/maintain/debug. Added many asserts on state and cleanup 
